--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "author": "Deriv",
     "dependencies": {
         "@artsy/fresnel": "^6.1.0",
+        "@deriv-com/blocks": "^0.0.5",
         "@deriv/analytics": "^1.2.1",
         "@deriv/deriv-api": "^1.0.11",
+        "@deriv/quill-design": "^1.0.17",
+        "@deriv/quill-icons": "^1.0.3",
         "@growthbook/growthbook-react": "^0.18.0",
         "@hookform/resolvers": "^3.0.1",
         "@livechat/customer-sdk": "^3.1.0",
@@ -52,7 +55,6 @@
         "match-sorter": "^6.3.1",
         "npm": "^9.6.2",
         "p-min-delay": "^4.0.2",
-        "postcss": "^8.4.5",
         "postcss-discard-duplicates": "^5.1.0",
         "postcss-ts-classnames": "^0.3.0",
         "prompt-sync": "^4.2.0",
@@ -103,6 +105,7 @@
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "^5.9.0",
         "@typescript-eslint/parser": "^5.9.0",
+        "autoprefixer": "^10.4.16",
         "babel-eslint": "10.1.0",
         "babel-jest": "^29.5.0",
         "babel-plugin-styled-components": "^2.0.2",
@@ -117,6 +120,7 @@
         "eslint-webpack-plugin": "^3.1.1",
         "gatsby-plugin-env-variables": "^2.3.0",
         "gatsby-plugin-eslint": "^4.0.2",
+        "gatsby-plugin-postcss": "^6.12.0",
         "gatsby-plugin-styled-components": "^6.11.0",
         "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.31",
         "gh-pages": "^3.2.3",
@@ -129,6 +133,7 @@
         "jest-extended": "^4.0.0",
         "lint-staged": "^12.1.5",
         "npm-force-resolutions": "0.0.10",
+        "postcss": "^8.4.31",
         "prettier": "^2.5.1",
         "query-string": "^7.0.1",
         "react-test-renderer": "^18.2.0",
@@ -139,6 +144,7 @@
         "stylelint-config-styled-components": "^0.1.1",
         "stylelint-processor-styled-components": "^1.10.0",
         "stylelint-webpack-plugin": "^3.1.0",
+        "tailwindcss": "^3.3.3",
         "typescript": "^4.5.4",
         "typescript-plugin-css-modules": "^4.2.2"
     },
